Store link locations with links

--- a/src/test/resources/anthophyta.wikitext
+++ b/src/test/resources/anthophyta.wikitext
@@ -1,6 +1,6 @@
 {{short description|Division of plants bearing flower-like structures}}
 {{Use dmy dates|date=December 2023}}
-The '''anthophytes''' are a [[paraphyletic]] grouping of plant taxa bearing flower-like reproductive structures. The group, once thought to be a [[clade]],<ref name="Doyle Donoghue 1986"/> contained the [[Flowering plants|angiosperm]] – the extant flowering plants, such as [[Rosaceae|roses]] and [[Poaceae|grasses]] – as well as the [[Gnetales]] and the extinct [[Bennettitales]].<ref name="Doyle Donoghue 1986">{{cite journal |last1=Doyle |first1=J. A. |last2=Donoghue |first2=M. J. |title=Seed plant phylogeny and the origin of angiosperms: An experimental cladistic approach |year=1986 |journal=Botanical Review |volume=52 |issue=4 |pages=321–431 |doi=10.1007/bf02861082 |s2cid=44844947 |language=en }}</ref>
+The '''anthophytes''' are a [[paraphyletic]] grouping of plant taxa bearing flower-like reproductive structures. The group, once thought to be a [[clade]], contained the [[Flowering plants|angiosperm]] – the extant flowering plants, such as [[Rosaceae|roses]] and [[Poaceae|grasses]] – as well as the [[Gnetales]] and the extinct [[Bennettitales]].<ref name="Doyle Donoghue 1986">{{cite journal |last1=Doyle |first1=J. A. |last2=Donoghue |first2=M. J. |title=Seed plant phylogeny and the origin of angiosperms: An experimental cladistic approach |year=1986 |journal=Botanical Review |volume=52 |issue=4 |pages=321–431 |doi=10.1007/bf02861082 |s2cid=44844947 |language=en }}</ref>
 
 Detailed morphological and molecular studies have shown that the group is not actually [[monophyletic]],<ref>{{Cite journal |last1=Coiro |first1=Mario |last2=Chomicki |first2=Guillaume |last3=Doyle |first3=James A. |date=n.d. |title=Experimental signal dissection and method sensitivity analyses reaffirm the potential of fossils and morphology in the resolution of the relationship of angiosperms and Gnetales |url=https://www.cambridge.org/core/journals/paleobiology/article/experimental-signal-dissection-and-method-sensitivity-analyses-reaffirm-the-potential-of-fossils-and-morphology-in-the-resolution-of-the-relationship-of-angiosperms-and-gnetales/77D0DC9945CCE39DAA1DC2FA2744A3D7 |journal=Paleobiology |volume=44 |issue=3 |pages=490–510 |doi=10.1017/pab.2018.23 |s2cid=91488394 }}</ref> with proposed floral homologies of the [[gnetophyte]]s and the [[angiosperm]]s having evolved in parallel.<ref name=Crepet2000/> This makes it easier to reconcile molecular clock data that suggests that the angiosperms diverged from the [[gymnosperm]]s around 320-300 mya.<ref name=Nam2003>{{cite journal | author=Nam J. | title=Antiquity and Evolution of the MADS-Box Gene Family Controlling Flower Development in Plants | journal=Mol. Biol. Evol. | volume=20 | issue=9 | pages=1435–1447 | year=2003 | doi=10.1093/molbev/msg152 | pmid=12777513 | display-authors=etal | doi-access=free }}</ref>
 
